--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,8 @@
     package="com.lingdiao.lingdiao_ble_demo">
 
     <!-- 蓝牙权限 -->
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-
-    <receiver android:name="com.ywq.broadcast.BluetoothReceiver" >
-        <intent-filter android:priority="1000">
-            <action android:name="android.bluetooth.device.action.PAIRING_REQUEST"/>
-            <action android:name="android.bluetooth.device.action.FOUND" />
-        </intent-filter>
-    </receiver>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name="com.lingdiao.lingdiao_ble_demo.BluetoothReceiver">
+            <intent-filter android:priority="1000">
+                <action android:name="android.bluetooth.device.action.PAIRING_REQUEST" />
+                <action android:name="android.bluetooth.device.action.FOUND" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
